2008-09-14  Russ Allbery  <rra@stanford.edu>

	* t/pod-spelling.t: New check to spell-check POD documentation
	using ispell with Pod::Spell.
	* ANSIColor.pm: Fix spelling and markup errors in documentation
	and add stop-words where appropriate.

2007-04-22  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.12 released.

2007-03-23  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Use the right syntax for internal POD links.
	Thanks, Rafael Garcia-Suarez.

2007-02-10  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Add cyan and white to the list of supported
	attributes.  Not sure how I managed to omit them before.

2006-07-12  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.11 released.

2006-06-22  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Clarify in the documentation the behavior of
	terminals when background colors are set across newlines, and
	rewrite some of the examples to avoid doing things that confuse
	the terminal.  Fix a couple of spelling errors.

	* test.pl: Moved to...
	* t/basic.t: ...here.
	* t/pod.t: New test for POD validity.

2005-08-21  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.10 released.

	* ANSIColor.pm (colored): Fix the $EACHLINE support to work
	properly with a line consisting solely of "0".  Remove Zenin's
	now-defunct e-mail address from the documentation.
	* test.pl: Test 0 and the empty string in combination with
	$EACHLINE.

	* tests/ansicolor: Add terminal test file from Joe Smith.
	* tests/vt100-torture: Likewise.
	* tests/README: Add an explanation of the test files.

2004-12-03  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.09 released.

	* ANSIColor.pm: Add compatibility information for Mac OS X
	Terminal from Daniel Lindsley.

2004-02-20  Russ Allbery  <rra@stanford.edu>

	* test.pl: Always use eq, not ==, for string comparisons.

2004-02-19  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.08 released.
